--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -125,7 +125,7 @@
                 </Grid>
             </SplitView.Pane>
 
-            <Grid Background="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}" CornerRadius="8, 0, 0, 0">
+            <Grid x:Name="webContainer" Background="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}" CornerRadius="8, 0, 0, 0">
                 <WebView2 x:Name="webView" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" DefaultBackgroundColor="Transparent"/>
             </Grid>
         </SplitView>
